Update Landing, About, Privacy, and Support

--- a/packages/web/tailwind.css
+++ b/packages/web/tailwind.css
@@ -158,7 +158,11 @@
 }
 
 @layer components {
-
+  .e-mail:before {
+    content: attr(data-website) "\0040" attr(data-user);
+    unicode-bidi: bidi-override;
+    direction: rtl;
+  }
 }
 
 @layer utilities {
