--- a/packages/web/src/stylesheets/ckeditor.css
+++ b/packages/web/src/stylesheets/ckeditor.css
@@ -163,8 +163,12 @@
  * Need to fix it here.
  * ref: https://stackoverflow.com/questions/52512665/how-to-disable-sticky-toolbar-in-classic-editor-when-page-is-scrolled
  */
+.ck.ck-editor {
+  z-index: 0;
+}
+
 .ck.ck-editor__top {
-  z-index: auto;
+  z-index: var(--ck-z-modal);
   position: sticky;
   position: -webkit-sticky;
   top: -1px;
