--- a/packages/web/src/stylesheets/loading.css
+++ b/packages/web/src/stylesheets/loading.css
@@ -74,7 +74,7 @@
   height: 20px;
   background: 0 0!important;
   border-radius: 100%;
-  border: 1px solid rgba(107, 114, 128, 1);
+  border: 1px solid rgb(31, 41, 55);
   border-bottom-color: transparent;
   animation: ball-clip-rotate .75s 0s linear infinite;
 }
