Add mobile section to Landing in web

--- a/packages/web/tailwind.css
+++ b/packages/web/tailwind.css
@@ -3,6 +3,22 @@
 @tailwind utilities;
 
 @layer base {
+  /* clears the 'X' from Internet Explorer */
+  input.hide-clear[type=search]::-ms-clear,
+  input.hide-clear[type=search]::-ms-reveal {
+    display: none;
+    width: 0;
+    height: 0;
+  }
+
+  /* clears the 'X' from Webkit */
+  input[type="search"]::-webkit-search-decoration,
+  input[type="search"]::-webkit-search-cancel-button,
+  input[type="search"]::-webkit-search-results-button,
+  input[type="search"]::-webkit-search-results-decoration {
+    -webkit-appearance:none;
+  }
+
   @font-face {
     font-family: 'Inter';
     font-style:  normal;
