Show loading while updating settings in web

--- a/packages/web/src/stylesheets/loading.css
+++ b/packages/web/src/stylesheets/loading.css
@@ -90,3 +90,16 @@
     transform: rotate(360deg) scale(.8);
   }
 }
+
+.lds-rotate {
+  animation: lds-rotate 1s 0s ease-in-out infinite;
+}
+
+@keyframes lds-rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
