--- a/packages/mobile/ios/Justnotecc/LaunchScreen.storyboard
+++ b/packages/mobile/ios/Justnotecc/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,13 +18,18 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImage" translatesAutoresizingMaskIntoConstraints="NO" id="rfb-tj-quj">
-                                <rect key="frame" x="163.5" y="198.5" width="48" height="48"/>
+                                <rect key="frame" x="139.5" y="174.5" width="96" height="96"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="128" id="Kpl-av-LaO"/>
+                                    <constraint firstAttribute="width" secondItem="rfb-tj-quj" secondAttribute="height" multiplier="1:1" id="XON-3v-WA4"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="rfb-tj-quj" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="bottom" multiplier="0.333333" constant="-24" id="duP-ko-R7V"/>
+                            <constraint firstItem="rfb-tj-quj" firstAttribute="width" secondItem="Bcu-3y-fUS" secondAttribute="width" multiplier="0.246" priority="750" id="WEk-0N-68f"/>
+                            <constraint firstItem="rfb-tj-quj" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="bottom" multiplier="0.333333" constant="-48" id="duP-ko-R7V"/>
                             <constraint firstItem="rfb-tj-quj" firstAttribute="centerX" secondItem="Bcu-3y-fUS" secondAttribute="centerX" id="jzl-By-bRn"/>
                         </constraints>
                     </view>
@@ -35,7 +40,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LaunchImage" width="48" height="48"/>
+        <image name="LaunchImage" width="96" height="96"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
