Upgrade React Native and dependencies

--- a/packages/mobile/ios/Justnotecc/LaunchScreen.storyboard
+++ b/packages/mobile/ios/Justnotecc/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,20 +17,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImage" translatesAutoresizingMaskIntoConstraints="NO" id="PLn-Gu-85u">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImage" translatesAutoresizingMaskIntoConstraints="NO" id="akt-Ie-1NH">
                                 <rect key="frame" x="162" y="251.33333333333334" width="106" height="105.66666666666666"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="PLn-Gu-85u" secondAttribute="height" multiplier="1:1" id="FcI-6X-0c5"/>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="128" id="KpQ-Jc-ywN"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="128" id="Mq4-pz-0Yg"/>
+                                    <constraint firstAttribute="width" secondItem="akt-Ie-1NH" secondAttribute="height" multiplier="1:1" id="hiL-yC-wkj"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="PLn-Gu-85u" firstAttribute="width" secondItem="Bcu-3y-fUS" secondAttribute="width" multiplier="0.246" priority="750" id="6bq-dI-PSt"/>
-                            <constraint firstItem="PLn-Gu-85u" firstAttribute="centerX" secondItem="Bcu-3y-fUS" secondAttribute="centerX" id="gTD-ue-xDm"/>
-                            <constraint firstItem="PLn-Gu-85u" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="bottom" multiplier="0.333333" constant="-48" id="rhs-Xs-SjR"/>
+                            <constraint firstItem="akt-Ie-1NH" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="bottom" multiplier="0.333333" constant="-48" id="kv2-IZ-1uB"/>
+                            <constraint firstItem="akt-Ie-1NH" firstAttribute="centerX" secondItem="Bcu-3y-fUS" secondAttribute="centerX" id="mAF-5q-uH4"/>
+                            <constraint firstItem="akt-Ie-1NH" firstAttribute="width" secondItem="Bcu-3y-fUS" secondAttribute="width" multiplier="0.246" priority="750" id="wKW-oC-qp3"/>
                         </constraints>
                     </view>
                 </viewController>
